// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t0] pass attempted without promises then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t1] first review is promised then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = progressed (review.self 1/2 promised)

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = tests-pass
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  do all tests pass? have you run the full test suite
   │  │    and verified no regressions were introduced?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.tests-pass.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that tests-pass
"
`;

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t2] second review is promised then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = progressed (review.self 2/2 promised)
"
`;

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t3] pass attempted with all promises then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   └─ ✓ judge.1 - allowed 0.6s

🗿 route.stone.set
   ├─ stone = 1
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.stone.i1.md
   │  ├─ reviews
   │  │   └─ r1: .test/mock-review.sh --paths 1.stone*.md
   │  │       ├─ finished [TIME] ✓
   │  │       └─ review: .route/1.guard.review.i1.3323f7a0e391b72d09ba5b4f51f33a2bfc06024571e276ee021a5f7e84874cc1.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.review.self.acceptance given: [case3] hashless promises survive hash changes (firm checkpoint) when: [t2] pass attempted after edit then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 2/2
   │  ├─ slug = tests-pass
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  do all tests pass? have you run the full test suite
   │  │    and verified no regressions were introduced?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.1._.r2.tests-pass.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that tests-pass
"
`;

exports[`driver.route.review.self.acceptance given: [case4] flat reviews array (backwards compatible) when: [t0] pass attempted with flat reviews then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   └─ ✓ judge.1 - allowed 0.4s

🗿 route.stone.set
   ├─ stone = 1
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.stone.i1.md
   │  ├─ reviews
   │  │   └─ r1: .test/mock-review.sh --paths 1.stone*.md
   │  │       ├─ finished [TIME] ✓
   │  │       └─ review: .route/1.guard.review.i1.3323f7a0e391b72d09ba5b4f51f33a2bfc06024571e276ee021a5f7e84874cc1.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.review.self.acceptance given: [case5] clone promises too quickly (time enforcement) when: [t1] second promise attempt (too quickly) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🍂 what is the rush?
   ├─ ...
   │
   ├─ what does haste cost?
   ├─ ...
   │
   ├─ does the self weigh more than the whole?
   │  ├─ what you miss, they must find
   │  ├─ minutes saved, hours spent
   │  └─ your haste, their burden
   │
   ├─ each review is an opportunity
   │  ├─ a chance to find a deeper truth
   │  ├─ not one to squander
   │  └─ no matter how repetitive
   │
   └─ trust the way
      ├─ what calls for pause, calls for cause
      └─ be true to the review 🍵

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  the review is the work.
   │  │  not a gate to pass.
   │  │  not a step to complete.
   │  │  the work itself.
   │  │
   │  │  you are not the author.
   │  │  you are the reviewer.
   │  │
   │  └─
   │
   ├─ trust the way 🪷
   │  ├─
   │  │
   │  │  when you see this prompt
   │  │    pause and articulate what you found
   │  │
   │  │  when you found issues
   │  │    fix them before you continue
   │  │
   │  │  when you found no issues
   │  │    articulate why it holds
   │  │
   │  │  when you cannot articulate either
   │  │    you have not reviewed
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;

exports[`driver.route.review.self.acceptance given: [case8] full challenge journey (first → absent → rushed → allowed) when: [t0] first promise attempt (no prior trigger) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  the review is the work.
   │  │  not a gate to pass.
   │  │  not a step to complete.
   │  │  the work itself.
   │  │
   │  │  you are not the author.
   │  │  you are the reviewer.
   │  │
   │  └─
   │
   ├─ trust the way 🪷
   │  ├─
   │  │
   │  │  when you see this prompt
   │  │    pause and articulate what you found
   │  │
   │  │  when you found issues
   │  │    fix them before you continue
   │  │
   │  │  when you found no issues
   │  │    articulate why it holds
   │  │
   │  │  when you cannot articulate either
   │  │    you have not reviewed
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;

exports[`driver.route.review.self.acceptance given: [case8] full challenge journey (first → absent → rushed → allowed) when: [t1] second promise attempt (file still absent) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🍂 what have you seen?
   ├─ ...
   │
   ├─ the articulation is absent
   │  └─ ./review/self/for.1._.r1.all-done.md
   │
   ├─ a promise without words
   │  ├─ is not a promise
   │  └─ it is a daydream
   │
   └─ the way asks
      ├─ write what you found
      ├─ write what you didn't
      └─ then return 🍵

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  the review is the work.
   │  │  not a gate to pass.
   │  │  not a step to complete.
   │  │  the work itself.
   │  │
   │  │  you are not the author.
   │  │  you are the reviewer.
   │  │
   │  └─
   │
   ├─ trust the way 🪷
   │  ├─
   │  │
   │  │  when you see this prompt
   │  │    pause and articulate what you found
   │  │
   │  │  when you found issues
   │  │    fix them before you continue
   │  │
   │  │  when you found no issues
   │  │    articulate why it holds
   │  │
   │  │  when you cannot articulate either
   │  │    you have not reviewed
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;

exports[`driver.route.review.self.acceptance given: [case8] full challenge journey (first → absent → rushed → allowed) when: [t2] third promise attempt (file created, too soon) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🍂 what is the rush?
   ├─ ...
   │
   ├─ what does haste cost?
   ├─ ...
   │
   ├─ does the self weigh more than the whole?
   │  ├─ what you miss, they must find
   │  ├─ minutes saved, hours spent
   │  └─ your haste, their burden
   │
   ├─ each review is an opportunity
   │  ├─ a chance to find a deeper truth
   │  ├─ not one to squander
   │  └─ no matter how repetitive
   │
   └─ trust the way
      ├─ what calls for pause, calls for cause
      └─ be true to the review 🍵

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  the review is the work.
   │  │  not a gate to pass.
   │  │  not a step to complete.
   │  │  the work itself.
   │  │
   │  │  you are not the author.
   │  │  you are the reviewer.
   │  │
   │  └─
   │
   ├─ trust the way 🪷
   │  ├─
   │  │
   │  │  when you see this prompt
   │  │    pause and articulate what you found
   │  │
   │  │  when you found issues
   │  │    fix them before you continue
   │  │
   │  │  when you found no issues
   │  │    articulate why it holds
   │  │
   │  │  when you cannot articulate either
   │  │    you have not reviewed
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.all-done.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;

exports[`driver.route.review.self.acceptance given: [case8] full challenge journey (first → absent → rushed → allowed) when: [t3] fourth promise attempt (file exists, time elapsed) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = progressed (review.self 1/2 promised)

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = tests-pass
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  do all tests pass? have you run the full test suite
   │  │    and verified no regressions were introduced?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ ./review/self/for.1._.r1.tests-pass.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1 --as promised --that tests-pass
"
`;
